# model-extraction-benchmark

./: .gitignore  AGENTS.md  Model_Extraction_Benchmark_v1.0.1_Contract_and_Implementation_Guide.md  README-ko.md  README.md  TODO.md  aggregate_matrix.py  analyze_results.py  generate_configs.py  pyproject.toml  run_all_mnist.sh  run_failures.sh  run_matrix.sh  run_rest_mnist.sh
configs/: activethief_experiment.yaml  cifar10_resnet18_soft_dfme_10k_seed0.yaml  cifar10_resnet18_soft_dfms_10k_seed0.yaml  cifar10_resnet18_soft_es_10k_seed0.yaml  cifar10_resnet18_soft_game_10k_seed0.yaml  cifar10_resnet18_soft_maze_10k_seed0.yaml  cloudleak_experiment.yaml  dfme_experiment.yaml  dfme_smoke.yaml  dfme_smoke_noeval.yaml  dissector_experiment.yaml  integration_test.yaml  mnist_lenet_hard_blackbox_dissector_10k_seed0.yaml  mnist_lenet_soft_activethief_10k_seed0.yaml  mnist_lenet_soft_blackbox_ripper_10k_seed0.yaml  mnist_lenet_soft_cloudleak_10k_seed0.yaml  mnist_lenet_soft_copycatcnn_10k_seed0.yaml  mnist_lenet_soft_dfme_10k_seed0.yaml  mnist_lenet_soft_dfms_10k_seed0.yaml  mnist_lenet_soft_es_10k_seed0.yaml  mnist_lenet_soft_game_10k_seed0.yaml  mnist_lenet_soft_inversenet_10k_seed0.yaml  mnist_lenet_soft_knockoff_nets_10k_seed0.yaml  mnist_lenet_soft_maze_10k_seed0.yaml  mnist_lenet_soft_random_10k_seed0.yaml  mnist_lenet_soft_swiftthief_10k_seed0.yaml  swiftthief_experiment.yaml
mebench/: __init__.py  __main__.py
papers/: README.md
results/: matrix_results.tex  matrix_results_accuracy.csv
tests/: test_activethief.py  test_activethief_selection.py  test_artifact_schema.py  test_budget_accounting.py  test_cache_cleanup.py  test_track_b.py  (+15 more)
(+260 files in other folders)
